Fix tests after changing the notification sending implementation